Fix toggle text alignment

--- a/bulkManager/css/GridFieldBulkEditingForm.scss
+++ b/bulkManager/css/GridFieldBulkEditingForm.scss
@@ -19,6 +19,7 @@
 	margin: 40px 0 20px 0;
 
 	text-decoration: underline;
+	text-align: right;
 	cursor: pointer;
 }
 
